updated test/server.spec.ts
